--- a/core/busybox/PKGBUILD
+++ b/core/busybox/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jens Pranaitis <jens@jenux.homelinux.org>
 
 pkgname=busybox
-pkgver=1.16.1
+pkgver=1.17.1
 pkgrel=1as
 pkgdesc="Utilities for rescue and embedded systems"
 arch=("i686" "x86_64")
@@ -13,23 +13,23 @@ depends=("slitaz-base-files" "glibc")
 makedepends=("make" "gcc" "sed" "ncurses")
 options=()
 source=($url/downloads/$pkgname-$pkgver.tar.bz2 \
-	$pkgname-$pkgver.config
-	busybox.conf
-	dnsd.conf
-	inetd.conf
-	udhcp.script
-	udhcpd.conf
-	zcip.script
-	daemon
-	$pkgname-$pkgver-vcsa2txt.u
-	$pkgname-$pkgver-cpio-mkdir.u
-	$pkgname-$pkgver-tar.u
-	$pkgname-$pkgver-stat.u
-	$pkgname-$pkgver-syslogd.u
-	$pkgname-$pkgver-basename.u
-	$pkgname-$pkgver-paths.u)
+	stuff/$pkgname-$pkgver.config
+	stuff/busybox.conf
+	stuff/dnsd.conf
+	stuff/inetd.conf
+	stuff/udhcp.script
+	stuff/udhcpd.conf
+	stuff/zcip.script
+	stuff/daemon
+	stuff/$pkgname-$pkgver-cpio-mkdir.u
+	stuff/$pkgname-$pkgver-tar.u
+	stuff/$pkgname-$pkgver-stat.u
+	stuff/$pkgname-$pkgver-ris.u
+	stuff/$pkgname-$pkgver-depmod.u
+	stuff/$pkgname-$pkgver-zmodules.u
+	stuff/$pkgname-$pkgver-usage.u)
 md5sums=('319486ec65078d07fde26eb620fecde7'
-         '52abccb002560edb5b4e269870863e99'
+         '98070dbd560d17753abb356521add504'
          '7e0621b6b9855c5bc80b20928b367dbf'
          'f3fa6a2d2d95cf5eeb4297fec92630e1'
          '2a7f2d8b6befadca48309db2561ffe26'
@@ -37,29 +37,38 @@ md5sums=('319486ec65078d07fde26eb620fecde7'
          '667803a8d21a97e8e0a969ddab9fae65'
          '54cb91c9b4d687bd5c24faab817d82ec'
          '79d1b571ba7f0faddd9063256775fe4e'
-         'a0b64dea4c2cf47fea2414bfb36d08a8'
-         'ecb3ccd05ae4e45c2196e34f30fa9f5f'
-         '2b2b32eca760af1c19f6616275fee606'
-         'ff0a33ff7872cac07573497bf4fa2f9a'
-         '6b90a770dfa11428c150c5cad1d01c37'
-         '68d93b4abbfd4f62c8d6e6029de83edf'
-         '997b5896a547ff1f227a47e5cbe49e0a')
+         '2a9f0cdf9dc747549b55caff210fdd55'
+         'ff24cba29b5d77e9592282766c7ed0c9'
+         '7893f846873e94256a7e6138b76fe002'
+         '806cd508222b816ccbe9a34bdd724407'
+         'e99c8b4a5c7704b49a75326f48c88983'
+         '7d384ad9b33370f33f98fbedaf9aa892'
+         '2c91fe40c7afdcf8d9712b5a6cbb83ea'
+         '7b684742aba5ce11a437b73a38d02a84'
+         '7dc100a83de04baf90586efefa71b168'
+         '5e0b3d08943d934ace681da78f3bc5f2'
+         '9b271c57fb749833e4163e11b11a52af')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
   cp $srcdir/$pkgname-$pkgver.config .config
-  patch -Np1 -i $srcdir/$pkgname-$pkgver-vcsa2txt.u || return 1
   patch -Np1 -i $srcdir/$pkgname-$pkgver-cpio-mkdir.u || return 1
   patch -Np1 -i $srcdir/$pkgname-$pkgver-tar.u || return 1
   patch -Np1 -i $srcdir/$pkgname-$pkgver-stat.u || return 1
-  patch -Np1 -i $srcdir/$pkgname-$pkgver-syslogd.u || return 1
-  patch -Np1 -i $srcdir/$pkgname-$pkgver-basename.u || return 1
-  patch -Np1 -i $srcdir/$pkgname-$pkgver-paths.u || return 1
+  patch -Np1 -i $srcdir/$pkgname-$pkgver-ris.u || return 1
+  patch -Np1 -i $srcdir/$pkgname-$pkgver-depmod.u || return 1
+  patch -Np1 -i $srcdir/$pkgname-$pkgver-zmodules.u || return 1
+  patch -Np1 -i $srcdir/$pkgname-$pkgver-usage.u || return 1
   
   # if you want to run menuconfig uncomment the following line:
   #make menuconfig ; return 1
-  make || return 1
-  make install || return 1
+  if [ "$(gcc --version | awk '{ print $3; exit }')" == "4.5.0" ]; then
+      # "CFLAGS=-O0" is a workaround for GCC 4.5.0 (sed crach)
+      # "CFLAGS=-fno-tree-pta" may be a workaround for GCC 4.5.0 (sed garbage)
+      make -j 4 "CFLAGS=-O0" && make "CFLAGS=-O0" install
+  else
+      make -j 4 && make install
+  fi
   chmod 4755 _install/bin/busybox
 }
 
@@ -76,7 +85,8 @@ package() {
   cp $srcdir/inetd.conf $pkgdir/etc
   mkdir -p $pkgdir/etc/init.d
   cp $srcdir/daemon $pkgdir/etc/init.d
-  for i in dnsd inetd udhcpd zcip crond ; do
+      for i in crond dnsd ftpd httpd inetd klogd ntpd syslogd telnetd tftpd \
+	     udhcpd zcip ; do
       ln -s $i $pkgdir/etc/init.d/$i
   done
   rm $pkgdir/linuxrc
